# Notes

./: .gitignore  README.md  resources.md
Apache Spark/: Test for PySpark.ipynb  Test.ipynb
Apache Spark/Examples/: Data Exploration.ipynb
Computer Science/Data Science/Apache Kafka/: cluster setup.md  intro.md  setup.md
Computer Science/Data Science/Apache NiFi/: cluster setup.md
Computer Science/Data Science/Apache Spark/: install_spark.sh  standalone cluster setup.md
Computer Science/Languages/C++/cmake for torch project/: CMakeLists.txt  CMakeSettings.json  main.cpp
Computer Science/Linux/: setup_dev_env.sh
Deep Learning/Examples/: Binary Classification - COVID Detection with PyTorch.ipynb  CIFAR10.ipynb  Convolutional Variational Autoencoders - Generating Faces.ipynb  Image Coloring with Convolutional Autoencoders.ipynb
Deep Learning/Info/: Loss Functions.ipynb  Optimizer.ipynb
Deep Learning/Notes/DEEP Learning - Ian Goodfellow, Yoshua Bengio, and Aaron Courville/: Chapter 0-5.ipynb  Chapter 11.ipynb  Chapter 14.ipynb
Deep Learning/Notes/MIT 6.S191/: Lecture 4.ipynb
Deep Learning/Notes/Stanford CS224N- NLP with Deep Learning/: Lecture 1.md  (+3 more)
Deep Learning/Templates/: Convolutional Autoencoder in PyTorch.ipynb
Learning Apache Spark/: Test.ipynb
Learning Deep Learning/: Activation Functions.ipynb  Vocabulary AND Vectorizer Class.ipynb  temp.ipynb
Learning Deep Learning/Examples/: Histopathologic Cancer Detection with PyTorch.ipynb
Learning Deep Learning/Templates/: Basic PyTorch Dataset.ipynb  Convolutional VAE PyTorch MNIST.ipynb
(+19 files in other folders)
